--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,15 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Indie+Flower"
+    />
     <title>To Do List</title>
   </head>
   <body>
     <header class="mb-5">
-      <nav class="navbar navbar-expand-lg fixed-top custom-navbar ">
-        <div class="container-fluid ">
+      <nav class="navbar navbar-expand-lg fixed-top custom-navbar">
+        <div class="container-fluid">
           <a class="navbar-brand" href="/">ToDo List</a>
           <button
             class="navbar-toggler"
@@ -24,17 +32,9 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Today</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/work">Work</a>
-              </li>
-            </ul>
-          </div>
         </div>
       </nav>
     </header>
-    <main>
+    <main></main>
+  </body>
+</html>
